TRAINING-18: Fix issue with h1, h2 and h6 titles alignment

--- a/themes/style/nuxeo-theme.css
+++ b/themes/style/nuxeo-theme.css
@@ -72,14 +72,12 @@ Based on the deck.js web-2.0.css theme
   margin-bottom: .1em;
 }
 .deck-container .slide h6 {
-  background-color: #ffcc30;
-  bottom: 8px;
-  color: #000;
-  font-size: .7em;
-  left: 150px;
-  padding: .1em .4em;
-  position: fixed;
-  text-align: center;
+  font-size:0.7em;
+  left:35%;
+  padding:.1em .4em;
+  position:absolute;
+  right:20%;
+  top:550px;
 }
 
 .deck-container .slide pre {
@@ -361,18 +359,20 @@ Based on the deck.js web-2.0.css theme
     max-width: 10em; }
 
 /* Overriding deck.core.css to allow h2 titles being centered like h1 titles */
+.csstransforms .slide h1, .csstransforms .slide .vcenter {
+  top:300px; }
+
 .slide h2 {
   font-weight: bold;
   text-align: center;
-  padding-top: 1em;
-  max-height: 100%; }
+  padding-top: 1em }
 
 .csstransforms .slide h2 {
   padding: 0 48px;
   position: absolute;
   left: 0;
   right: 0;
-  top: 50%;
+  top: 300px;
   -webkit-transform: translate(0, -50%);
   -moz-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
